--- a/trab/templates/layout.html
+++ b/trab/templates/layout.html
@@ -30,7 +30,7 @@
                         <a class="nav-link" href={{url_for('listar_clientes')}}>Clientes</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href={{url_for('produtos')}}>Fornecedores</a>
+                        <a class="nav-link" href={{url_for('listar_fornecedores')}}>Fornecedores</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href={{url_for('produtos')}}>Compras</a>
