--- a/trab/templates/cliente/cadastrar_cliente.html
+++ b/trab/templates/cliente/cadastrar_cliente.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
 <div class="container mt-5">
-    <h2 class="mb-4 text-center">{{ titulo or 'Cadastrar Fornecedor' }}</h2>
+    <h2 class="mb-4 text-center">{{ titulo or 'Cadastrar Cliente' }}</h2>
     <form method="POST">
         {{ form.hidden_tag() }}
         <div class="mb-3">
@@ -13,21 +13,21 @@
             {{ form.email(class="form-control") }}
         </div>
         <div class="mb-3">
-            {{ form.cnpj.label(class="form-label") }}
-            {{ form.cnpj(class="form-control") }}
+            {{ form.cpf.label(class="form-label") }}
+            {{ form.cpf(class="form-control") }}
         </div>
         <div class="mb-3">
-            {{ form.telefone.label(class="form-label") }}
-            {{ form.telefone(class="form-control") }}
+            {{ form.cidade.label(class="form-label") }}
+            {{ form.cidade(class="form-control") }}
         </div>
         <div class="mb-3">
-            {{ form.endereco.label(class="form-label") }}
-            {{ form.endereco(class="form-control") }}
+            {{ form.estado.label(class="form-label") }}
+            {{ form.estado(class="form-control") }}
         </div>
-        
+
         <div class="d-flex justify-content-center gap-3">
             <button type="submit" class="btn btn-success">Salvar</button>
-            <a href="{{ url_for('listar_fornecedores') }}" class="btn btn-secondary">Cancelar</a>
+            <a href="{{ url_for('clientes') }}" class="btn btn-secondary">Cancelar</a>
         </div>
     </form>
 </div>
