--- a/trab/templates/fornecedor/fornecedores.html
+++ b/trab/templates/fornecedor/fornecedores.html
@@ -18,6 +18,7 @@
                     <th>CNPJ</th>
                     <th>Cidade</th>
                     <th>Estado</th>
+                    <th>Ações</th>
                 </tr>
             </thead>
             <tbody>
