--- a/trab/templates/layout.html
+++ b/trab/templates/layout.html
@@ -27,16 +27,16 @@
                         <a class="nav-link" href={{url_for('produtos')}}>Produtos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href={{url_for('listar_clientes')}}>Clientes</a>
+                        <a class="nav-link" href={{url_for('clientes')}}>Clientes</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href={{url_for('listar_fornecedores')}}>Fornecedores</a>
+                        <a class="nav-link" href={{url_for('fornecedores')}}>Fornecedores</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href={{url_for('produtos')}}>Compras</a>
+                        <a class="nav-link" href={{url_for('compras')}}>Compras</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href={{url_for('produtos')}}>Vendas</a>
+                        <a class="nav-link" href={{url_for('vendas')}}>Vendas</a>
                     </li>
                 </ul>
             </div>
