--- a/trab/templates/produto/produtos.html
+++ b/trab/templates/produto/produtos.html
@@ -1,23 +1,20 @@
 {% extends "layout.html" %}
 {% block content %}
-<div class="container my-5">
-    <h1 class="mb-4 text-center">Produtos</h1>
-
-    <div class="d-flex justify-content-center mb-4">
-        <a href="{{ url_for('cadastrar_produto') }}" class="btn btn-info btn-lg">
-            Cadastrar Novo Produto
+<div class="container my-4">
+    <div class="d-flex justify-content-between align-items-center mb-4">
+        <h2 class="mb-4 text-center">Produtos</h2>
+        <a href="{{ url_for('cadastrar_produto') }}" class="btn btn-primary">
+            <i class="bi bi-plus-circle"></i> Novo Produto
         </a>
     </div>
 
-    <div class="table-responsive">
+    <div class="table-responsive text-center">
         <table class="table table-bordered table-hover align-middle shadow-sm">
-            <thead class="table-primary text-center">
+            <thead class="table-primary">
                 <tr>
                     <th>Nome</th>
                     <th>Preço de Compra</th>
                     <th>Preço de Venda</th>
-                    <th>ICMS Crédito (%)</th>
-                    <th>ICMS Débito (%)</th>
                     <th>Ações</th>
                 </tr>
             </thead>
@@ -27,8 +24,6 @@
                     <td>{{ produto.nome }}</td>
                     <td>R$ {{ produto.preco_compra }}</td>
                     <td>R$ {{ produto.preco_venda }}</td>
-                    <td>{{ produto.icms_credito }}</td>
-                    <td>{{ produto.icms_debito }}</td>
                     <td>
                         <a href="{{ url_for('editar_produto', produto_id=produto.id) }}" class="btn btn-sm btn-primary me-2">Editar</a>
                         <form action="{{ url_for('excluir_produto', produto_id=produto.id) }}" method="post" class="d-inline">
