--- a/trab/templates/cliente/cadastrar_cliente.html
+++ b/trab/templates/cliente/cadastrar_cliente.html
@@ -1,16 +1,12 @@
 {% extends "layout.html" %}
 {% block content %}
 <div class="container mt-5">
-    <h2 class="mb-4 text-center">{{ titulo or 'Cadastrar Cliente' }}</h2>
+    <h2 class="mb-4 text-center">{{ titulo or 'Cadastro de Cliente' }}</h2>
     <form method="POST">
         {{ form.hidden_tag() }}
         <div class="mb-3">
             {{ form.nome.label(class="form-label") }}
             {{ form.nome(class="form-control") }}
-        </div>
-        <div class="mb-3">
-            {{ form.email.label(class="form-label") }}
-            {{ form.email(class="form-control") }}
         </div>
         <div class="mb-3">
             {{ form.cpf.label(class="form-label") }}
@@ -26,8 +22,8 @@
         </div>
 
         <div class="d-flex justify-content-center gap-3">
-            <button type="submit" class="btn btn-success">Salvar</button>
             <a href="{{ url_for('clientes') }}" class="btn btn-secondary">Cancelar</a>
+            <button type="submit" class="btn btn-success">Cadastrar</button>
         </div>
     </form>
 </div>
