--- a/trab/templates/compra/compras.html
+++ b/trab/templates/compra/compras.html
@@ -8,11 +8,10 @@
         </a>
     </div>
 
-    <div class="table-responsive">
-        <table class="table table-striped table-hover">
-            <thead class="table-dark">
+    <div class="table-responsive text-center">
+        <table class="table table-bordered table-hover align-middle shadow-sm">
+            <thead class="table-primary">
                 <tr>
-                    <th>ID</th>
                     <th>Data</th>
                     <th>Fornecedor</th>
                     <th>Nota Fiscal</th>
@@ -23,16 +22,10 @@
             <tbody>
                 {% for compra in compras %}
                 <tr>
-                    <td>{{ compra.id }}</td>
                     <td>{{ compra.data_compra.strftime('%d/%m/%Y') }}</td>
                     <td>{{ compra.fornecedor.nome }}</td>
                     <td>{{ compra.nf_entrada }}</td>
                     <td>R$ {{ "%.2f"|format(compra.valor_total) }}</td>
-                    <td>
-                        <a href="{{ url_for('detalhes_compra', id=compra.id) }}" class="btn btn-sm btn-info" title="Detalhes">
-                            <i class="bi bi-eye"></i>
-                        </a>
-                    </td>
                 </tr>
                 {% else %}
                 <tr>
