--- a/trab/templates/produto/cadastrar_produto.html
+++ b/trab/templates/produto/cadastrar_produto.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="container mt-5">
-    <h2 class="mb-4 text-center">{{ titulo or 'Cadastrar Produto' }}</h2>
+    <h2 class="mb-4 text-center">{{ titulo or 'Cadastro de Produto' }}</h2>
     <form method="POST">
         {{ form.hidden_tag() }}
 
@@ -21,19 +21,9 @@
             {{ form.preco_venda(class="form-control") }}
         </div>
 
-        <div class="mb-3">
-            {{ form.icms_credito.label(class="form-label") }}
-            {{ form.icms_credito(class="form-control") }}
-        </div>
-
-        <div class="mb-3">
-            {{ form.icms_debito.label(class="form-label") }}
-            {{ form.icms_debito(class="form-control") }}
-        </div>
-
         <div class="d-flex justify-content-center gap-3">
-            <button type="submit" class="btn btn-success">Salvar</button>
             <a href="{{ url_for('produtos') }}" class="btn btn-secondary">Cancelar</a>
+            <button type="submit" class="btn btn-success">Cadastrar</button>
         </div>
     </form>
 </div>
