--- a/trab/templates/venda/vendas.html
+++ b/trab/templates/venda/vendas.html
@@ -8,11 +8,10 @@
         </a>
     </div>
 
-    <div class="table-responsive">
-        <table class="table table-striped table-hover">
-            <thead class="table-dark">
+    <div class="table-responsive text-center">
+        <table class="table table-bordered table-hover align-middle shadow-sm">
+            <thead class="table-primary">
                 <tr>
-                    <th>ID</th>
                     <th>Data</th>
                     <th>Cliente</th>
                     <th>Pagamento</th>
@@ -23,16 +22,10 @@
             <tbody>
                 {% for venda in vendas %}
                 <tr>
-                    <td>{{ venda.id }}</td>
                     <td>{{ venda.data_venda.strftime('%d/%m/%Y') }}</td>
                     <td>{{ venda.cliente.nome if venda.cliente else 'N/A' }}</td>
                     <td>{{ 'À Vista' if venda.forma_pagamento == 'avista' else 'A Prazo' }}</td>
                     <td>R$ {{ "%.2f"|format(venda.valor_total) }}</td>
-                    <td>
-                        <a href="{{ url_for('detalhes_venda', id=venda.id) }}" class="btn btn-sm btn-info" title="Detalhes">
-                            <i class="bi bi-eye"></i>
-                        </a>
-                    </td>
                 </tr>
                 {% else %}
                 <tr>
