--- a/trab/templates/cliente/cadastrar_cliente.html
+++ b/trab/templates/cliente/cadastrar_cliente.html
@@ -20,6 +20,10 @@
             {{ form.estado.label(class="form-label") }}
             {{ form.estado(class="form-control") }}
         </div>
+        <div class="mb-3">
+            {{ form.status.label(class="form-label") }}
+            {{ form.status(class="form-control") }}
+        </div>
 
         <div class="d-flex justify-content-center gap-3">
             <a href="{{ url_for('clientes') }}" class="btn btn-secondary">Cancelar</a>
