--- a/trab/templates/cliente/clientes.html
+++ b/trab/templates/cliente/clientes.html
@@ -12,27 +12,24 @@
         <table class="table table-bordered table-hover align-middle shadow-sm">
             <thead class="table-primary">
                 <tr>
-                    <th>ID</th>
                     <th>Nome</th>
                     <th>CPF</th>
                     <th>Cidade</th>
                     <th>Estado</th>
+                    <th>Status</th>
                     <th>Ações</th>
                 </tr>
             </thead>
             <tbody>
                 {% for cliente in clientes %}
-                <tr>
-                    <td>{{ cliente.id }}</td>
+                <tr class="text-center">
                     <td>{{ cliente.nome }}</td>
                     <td>{{ cliente.cpf }}</td>
                     <td>{{ cliente.cidade if cliente.cidade else '-' }}</td>
                     <td>{{ cliente.estado if cliente.estado else '-' }}</td>
+                    <td>{{ cliente.status }}</td>
                     <td>
                         <a href="{{ url_for('editar_cliente', cliente_id=cliente.id) }}" class="btn btn-sm btn-primary me-2">Editar</a>
-                        <form action="{{ url_for('excluir_cliente', cliente_id=cliente.id) }}" method="POST" class="d-inline">
-                            <button type="submit" class="btn btn-sm btn-danger">Excluir</button>
-                        </form>
                     </td>
                 </tr>
                 {% else %}
