--- a/trab/templates/compra/compras.html
+++ b/trab/templates/compra/compras.html
@@ -29,6 +29,10 @@
                             <span><i class="bi bi-currency-dollar me-2"></i>Valor Total</span>
                             <span class="fw-bold text-success">R$ {{ "%.2f"|format(compra.valor_total) }}</span>
                         </li>
+                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                            <span><i class="bi bi-currency-dollar me-2"></i>Status</span>
+                            <span class="fw-bold text-success">R$ {{ compra.status }}</span>
+                        </li>
                     </ul>
                 </div>
                 <div class="card-footer bg-transparent">
