--- a/trab/templates/fornecedor/cadastrar_fornecedor.html
+++ b/trab/templates/fornecedor/cadastrar_fornecedor.html
@@ -20,7 +20,11 @@
             {{ form.estado.label(class="form-label") }}
             {{ form.estado(class="form-control") }}
         </div>
-        
+        <div class="mb-3">
+            {{ form.status.label(class="form-label") }}
+            {{ form.status(class="form-control") }}
+        </div>
+
         <div class="d-flex justify-content-center gap-3">
             <a href="{{ url_for('fornecedores') }}" class="btn btn-secondary">Cancelar</a>
             <button type="submit" class="btn btn-success">Cadastrar</button>
