--- a/trab/templates/produto/cadastrar_produto.html
+++ b/trab/templates/produto/cadastrar_produto.html
@@ -21,6 +21,11 @@
             {{ form.preco_venda(class="form-control") }}
         </div>
 
+        <div class="mb-3">
+            {{ form.status.label(class="form-label") }}
+            {{ form.status(class="form-control") }}
+        </div>
+
         <div class="d-flex justify-content-center gap-3">
             <a href="{{ url_for('produtos') }}" class="btn btn-secondary">Cancelar</a>
             <button type="submit" class="btn btn-success">Cadastrar</button>
