--- a/trab/templates/produto/produtos.html
+++ b/trab/templates/produto/produtos.html
@@ -34,6 +34,10 @@
                             <span class="fw-bold">{{ produto.estoque }}%</span>
                         </li>
                         {% endif %}
+                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                            <span><i class="bi bi-percent me-2"></i>Status</span>
+                            <span class="fw-bold">{{ produto.status }}</span>
+                        </li>
                     </ul>
                 </div>
                 <div class="card-footer bg-transparent">
@@ -42,11 +46,6 @@
                            class="btn btn-sm btn-outline-primary me-2">
                             <i class="bi bi-pencil"></i> Editar
                         </a>
-                        <form action="{{ url_for('excluir_produto', produto_id=produto.id) }}" method="post" class="d-inline">
-                            <button type="submit" class="btn btn-sm btn-outline-danger">
-                                <i class="bi bi-trash"></i> Excluir
-                            </button>
-                        </form>
                     </div>
                 </div>
             </div>
