--- a/trab/templates/venda/vendas.html
+++ b/trab/templates/venda/vendas.html
@@ -40,6 +40,10 @@
                             <span class="fw-bold text-success">R$ {{ "%.2f"|format(venda.lucro_total) }}</span>
                         </li>
                         {% endif %}
+                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                            <span><i class="bi bi-graph-up me-2"></i>Status</span>
+                            <span class="fw-bold text-success">{{ venda.status }}</span>
+                        </li>
                     </ul>
                 </div>
                 <div class="card-footer bg-transparent">
