--- a/trab/templates/cliente/clientes.html
+++ b/trab/templates/cliente/clientes.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="container mt-4">
     <div class="d-flex justify-content-between align-items-center mb-4">
-        <h2>Lista de Clientes</h2>
+        <h2>Clientes</h2>
         <a href="{{ url_for('cadastrar_cliente') }}" class="btn btn-primary">
             <i class="bi bi-plus-circle"></i> Novo Cliente
         </a>
